--- a/src/CreateContent.css
+++ b/src/CreateContent.css
@@ -35,3 +35,25 @@
     margin-bottom: 15px;
   }
   
+  .success-message {
+    color: green;
+    background-color: #e6ffe6;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid green;
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+  }
+  
+  .error-message {
+    color: red;
+    background-color: #ffe6e6;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid red;
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+  }
+  
