--- a/src/Navbar-tech.css
+++ b/src/Navbar-tech.css
@@ -4,8 +4,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    background-color: #0c0c0c;
+    background-color: #faf7f7;
     color: white;
+    background:rgba(0, 0, 0, 0.5)
 }
 
 
