--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -13,6 +13,8 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    color: white;
+    text-decoration: #1c1b1b;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     flex-grow: 1; /* Allow space for logo on the left */
     align-items: center;
