--- a/src/Signup.css
+++ b/src/Signup.css
@@ -71,7 +71,7 @@ body {
 button[type="submit"] {
   width: 100%;
   padding: 1rem;
-  background-color: #e14d2a;
+  background-color: #6e8efb;
   color: #fff;
   border: none;
   border-radius: 12px;
@@ -82,7 +82,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #d14a1a;
+  background-color: #6e8efb;
 }
 
 /* Signup link */
